kube/dev/dev-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dev-wbi-app
  labels:
    app: wagtail-batteries-included
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wagtail-batteries-included
  template:
    metadata:
      labels:
        app: wagtail-batteries-included
    spec:
      containers:
        - image: ghcr.io/fourfridays/wagtail-batteries-included:dev
          name: wagtail-batteries-included
          ports:
            - containerPort: 8080
              name: gunicorn
---
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    app: wagtail-batteries-included
spec:
  selector:
    app: wagtail-batteries-included
  ports:
    - port: 8088
      targetPort: 8080
  type: ClusterIP
